[gd_scene load_steps=2 format=3 uid="uid://dx4bxusk8cg17"]

[ext_resource type="Script" uid="uid://cbucyqaf6w4t2" path="res://Script/script_MainMenu.gd" id="1_tt5f1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
script = ExtResource("1_tt5f1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1456.0
offset_top = 720.0
offset_right = 1856.0
offset_bottom = 1020.0
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 72)
layout_mode = 2
text = "Start"

[node name="LevelChoiceButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Choice Level"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Setting"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.3529412)
text = "Version 0.0.1"
horizontal_alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1424.0
offset_top = 72.0
offset_right = 1855.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 72
text = "Game Name"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelChoiceButton" to="." method="_on_level_choice_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
